--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R:
 Description: A work in progress. This package will provide a suite of data 
     and table visualisation and analysis tools to support communication of 
     the process/methods and findings of evidence reviews (including 
-    systematic reviews, systematic maps, scopin reviews, evidence and gap 
+    systematic reviews, systematic maps, scoping reviews, evidence and gap 
     maps, etc.).
 License: GPL-3
 Imports:
